# fantastic-octo-parakeet

./: .pre-commit-config.yaml  LICENSE  README.md  __main__.py  pyproject.toml
.github/workflows/: lint.yml
