[tool.poetry]
name = "fantastic-octo-parakeet"
version = "0.1.0"
description = ""
authors = ["sawica <61832069+sawica@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tmp
)/
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true